    This bug was introduced with the queues model in core.c.
  o Now it is possible to disable the debugging support at runtime if it was
    compiled in.
  o Restored the command line switch `-e' (exec).
  o Added new beta signal handling functions.
  o Fixed connection failures not handled properly in tunnel mode.
  o Fixed global return status to match the program specifications.


[*] Tue Jun 18 2002 - netcat v0.5.2

  o Fixed a bug in UDP listen mode with unspecified port where Netcat was not
    actually listening.
  o Now a verbosity level 2 message is printed on listening.
  o Made netcat_strid() public in network.c with some minor changes.
  o More code cleanup.  Added a global variable netcat_mode to specify in which
    mode netcat was launched.
  o Fixed a preprocessor warning on some OSes.
  o Many fixes to the resolver functions.  Now all weird DNS things that you
    may find in the net are reported with the `-v' command line switch.
  o Fixed a bug with some redirected input stream where it didn't check other
    streams for new data anymore.
  o Error messages on connect failure (both in connecting mode and tunneling
    mode) were totally wrong.
  o Statistics now use a human readable output and are printed even in the
    listen mode and tunnel mode. [BUG #569618]
  o Minor fixes on the errors output.
  o More updates to the documentation.


[*] Mon Jun 10 2002 - netcat v0.5.1

  o Completely rewritten the function core_readwrite() in order to allow more
    possibilities of features adding.
  o Minor code cleanup.
  o Fixed a variable not correctly initialized, causing netcat to bind() with
    bogus information in certain circumstances.
  o Changed the prototype of the telnet codes parsing function to match the
    new objects-based design.
  o With udp listening mode the first 1024 bytes of the first incoming packet
    are no longer lost.
  o More updates to the man and info documentation files.